--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"fix-all": "pnpm lint:fix && pnpm format"
 	},
 	"dependencies": {
+		"@radix-ui/react-alert-dialog": "^1.0.5",
+		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-select": "^2.0.0",
